--- a/fullstackAcademy/countdownPage/countdown.css
+++ b/fullstackAcademy/countdownPage/countdown.css
@@ -1,19 +1,19 @@
-#title{
+.main{
     text-align: center;
-    font-weight: bolder;
-    color: red;
-    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+}
+#title{
+    font-size: 40px;
+    text-transform: capitalize;
 }
 #timer{
-    text-align: center;
-    font-weight: normal;
-    color: black;
     font-size: 100px;
 }
-
-#URGENT{
+.URGENT{
     font-weight: bolder;
     color: red;
-    font-size: 100px;
-    text-align: center;
+}
+.normal{
+    font-weight: normal;
 }
