--- a/whateverComesToMind/generalStyle.css
+++ b/whateverComesToMind/generalStyle.css
@@ -4,8 +4,7 @@ body{
     padding: 0px;
 }
 .module{
-    border: 1
-    px solid rgb(255,255,255);
+    border: 1px solid rgb(255,255,255);
 }
 .moduleName{
     border: 1px solid rgb(255,255,255);
@@ -14,5 +13,5 @@ body{
     font-weight: 900;
     float: left;
     font-family: 'Courier New', Courier, monospace;
-    color: rgb(1, 200, 255);
+    color: rgb(80, 240, 255);
 }
